# Abandoned-Object-Detection

./: .gitignore  README.md  Run_AODSystem  Run_AODSystem.sh  Run_AODSystem2.sh  Run_AODSystem3.sh  System_Evaluation  System_Evaluation1
Execution times/: Times.m
build_debug/: Makefile
build_release/: Makefile  System_Evaluation  ui_mainwindow.h
config/: MixtureOfGaussianV2.xml
datasets/: Category_easy.cat  Category_hard.cat  Category_medium.cat  annotation_guidelines.txt  download_AODdataset.sh
evaluation/: Category_easy.cat  Category_hard.cat  Category_medium.cat  Extract_Results_jcs.m  Extract_Results_jcs_OLD.m  Extract_results_ASconfigSystem_Global.m  README  Run_AODSystem.sh  Times.m  eval_ASconfigSystem.sh  eval_ASconfigSystem_variableStaticTime.m  extract_results_ASconfigSystem.m  run_ASconfigSystem.sh
lib/: BackgroundSubtractorPAWCS.cpp  BackgroundSubtractorPAWCS.h  README
lib/pdlibrary/: CMakeLists.txt
lib/pdlibrary/acf/: README  acf.hpp
lib/pdlibrary/acf/ACF/: ACFDetector.cpp  ACFDetector.h  ACFFeaturePyramid.cpp  ACFFeaturePyramid.h  Channel.cpp  Channel.h  ChannelFeatures.cpp  ChannelFeatures.h  ColorChannel.cpp  GradHistChannel.cpp  GradMagChannel.h  gradientMex.cpp  imResampleMex.hpp  rgbConvertMex.hpp  wrappers.cpp  wrappers.hpp
lib/pdlibrary/acf/Core/: DetectionList.cpp  DetectionList.h  DetectorManager.cpp  DetectorManager.h  FrameFromCamera.cpp  FrameFromDirectory.cpp  FrameFromDirectory.h  FrameProducer.cpp  FrameProducer.h  NonMaximumSuppression.h  ScaleSpacePyramid.cpp  ScaleSpacePyramid.h  detection.cpp  detectormodel.cpp  detectormodel.h  featurelayer.h  filelocator.cpp  filelocator.h  nms.cpp  nms.h
lib/pdlibrary/dpm/: dpm_cascade.cpp  inriaperson.xml
results/: AVSSS07_EASY_2_1_1_1_2017-09-29.12-45.time  AVSSS07_EASY_2_1_1_1_2017-09-29.12-45.xml  AVSSS07_EASY_2_1_1_1_2017-10-02.12-57.time  AVSSS07_EASY_2_1_1_1_2017-10-02.12-57.xml  AVSSS07_MEDIUM_2_1_1_1_2017-10-02.16-42.time  (+12 more)
(+3950 files in other folders)
